/*
 * $Id: ChangeLog,v 1.3418 2004/09/09 11:48:37 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-09-09 23:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/val.c
    ! do not decimal part for very big integer numbers

  * xharbour/source/vm/itemapi.c
    ! small fix in rounding str result for very big (over double
      precision) numbers when converted without decimal part

2004-09-09 13:45 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * xharbour/config/w32/watcom.cf
    * reverted C_USR change I did. It was not working
  * xharbour/source/rtl/gtwvt/wvtutil.c
    * added an #ifdef __WATCOMC__ 

2004-09-08 18:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed the problem with updating header for readonly areas when
      structural index is created

  * xharbour/source/rdd/dbf1.c
    ! generate RT error when ZAP or PACK is called for READONLY WA

2004-09-08 12:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtos2/gtos2.c
    * commented out setDispCP() and setKeyCP() until they will not be
      defined in GTOS2

2004-09-07 19:49 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/rtl/hbini.prg
    + Added support for 3rd optional param <cSplitters> to HB_ReadIni().

  /*
     Giancarlo, I did it that way to not break possible existing code,
     but I have no clue why ':' is also used as a spliter instead of just '='?
   */

2004-09-08 01:50 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtos2/gtos2.c
  * xharbour/source/rtl/gtos2/mouseos2.c
   + added multi GT support - sorry I'm not an OS2 user - can someone
     check it, please. I do not know if it even compile - I hope so.

  * xharbour/doc/en/hb_apigt.txt